# geo_dataread

./: README.md  pyproject.toml
src/geo_dataread/: __init__.py  gps_displ.py  gps_read.py  gps_savetimes.py
tests/: test-gps_read.py
