[project]
name = "geo-dataread"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
    { name = "Maria Fernanda Gonzalez", email = "mariagr@vedur.is" },
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.13"
dependencies = [
    "geofunc@git+https://github.com/bennigo/geofunc.git",
    "gps_parser@git+https://github.com/bennigo/gps_parser.git",
    # "gtimes@git+https://github.com/bennigo/gtimes.git"
    "pyproj>=3.7.1",
    "scipy>=1.16.0",
]

[project.scripts]
geo-dataread = "geo_dataread:main"
gps-savetimes = "geo_dataread.gps_savetimes:main"
gps-displacemnts = "geo_dataread.gps_displ:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
